font, alignment, theme issue fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,6 +19,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  font-family: "Lexend", sans-serif;
   /* background: linear-gradient(
       to bottom,
       transparent,
@@ -32,6 +33,10 @@ body {
 
 .text-black-600 {
   color: #1B1B1B;
+}
+
+*{
+  font-family: "Lexend", sans-serif;
 }
 
 .text-light-gray {
@@ -113,7 +118,7 @@ body {
   font-size: 1.125rem !important;
   line-height: 1.75rem !important;
   background-color: transparent !important;
-  font-family: Roboto, sans-serif !important;
+  /* font-family: Roboto, sans-serif !important; */
   margin: 0 !important;
 }
 
